--- a/web-client/src/app/components/error/error.component.html
+++ b/web-client/src/app/components/error/error.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <h1>Whoopsie!</h1>
+<div class="comp-container">
+  <h1 class="headline">Whoopsie!</h1>
   <img src="../../../assets/img/whoopsie.jpg" width="50%">
   <p style="text-align: center">
     Looks like something went wrong... Remember, this project is still in the making.
