Change logo, title, and lobby leader style.

--- a/web-client/src/app/components/lobby-members-list/lobby-members-list.component.html
+++ b/web-client/src/app/components/lobby-members-list/lobby-members-list.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let member of members">
-  <div class="member-card">
+  <div class="member-card" [class.member-card-leader]="member.id === leaderId">
     <div class="member-card-content">
       {{ member.userName }}
     </div>
