--- a/web-client/src/app/components/navbar/navbar.component.html
+++ b/web-client/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="header-bar">
   <div class="logo-container">
-    <div class="logo"><a routerLink="/">Cards On The Web</a></div>
+    <div class="logo"><a routerLink="/">Cards Against A Manatee</a></div>
   </div>
   <div class="info-container">
     <div class="info-box" *ngIf="userName"><b>User:</b> {{ userName }}</div>
