Fix display of Next Turn button.

--- a/web-client/src/app/components/lobby/lobby.component.html
+++ b/web-client/src/app/components/lobby/lobby.component.html
@@ -34,7 +34,7 @@
         <div *ngFor="let whiteCard of personalWhiteCards"
              (click)="playWhiteCard(whiteCard)"
              class="card card-white"
-             [class.card-white-playable]="turnActive">
+             [class.card-white-playable]="canPlay">
           {{ whiteCard.text }}
         </div>
       </div>
