Fix secondary button style.

--- a/web-client/src/app/components/join-lobby/join-lobby.component.html
+++ b/web-client/src/app/components/join-lobby/join-lobby.component.html
@@ -7,7 +7,7 @@
     spellcheck="false"
     placeholder="The lobby id (duh...)">
   <div class="button-row">
-    <button (click)="onCreate()" class="btn btn-secondary">Create New Lobby</button>
-    <button (click)="onJoin()" class="btn btn-primary">Join</button>
+    <button (click)="onCreate()" class="btn btn-secondary">Create New</button>
+    <button (click)="onJoin()" class="btn btn-primary">Join Lobby</button>
   </div>
 </div>
