--- a/web-client/src/app/components/lobby/lobby.component.scss
+++ b/web-client/src/app/components/lobby/lobby.component.scss
@@ -31,7 +31,7 @@ $padding-top: 30px;
   margin-bottom: $padding-top;
 }
 
-.black-card-container {
+.table {
 
 }
 
@@ -41,7 +41,7 @@ $padding-top: 30px;
   align-items: flex-start;
   justify-content: flex-start;
   flex-wrap: wrap;
-  height: 300px;
+  height: 600px;
 }
 
 .placed-white-cards {
