--- a/web-client/src/styles.scss
+++ b/web-client/src/styles.scss
@@ -1,5 +1,4 @@
-/* ======= Vars ====== */
-$btn-hover-bg-color: #1d1d1d;
+@import "./variables.scss";
 
 * {
   box-sizing: border-box;
@@ -9,7 +8,8 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
-  background-color: aqua;
+  background-color: $color-primary;
+  color: $color-text-primary;
 }
 
 h1.headline {
@@ -67,8 +67,8 @@ input[type=text].big-input:focus {
   background-color: black;
 
   &:hover {
-    background-color: $btn-hover-bg-color;
-    border-color: $btn-hover-bg-color;
+    background-color: $color-btn-hover;
+    border-color: $color-btn-hover;
   }
 }
 
@@ -78,8 +78,8 @@ input[type=text].big-input:focus {
 
   &:hover {
     &:hover {
-      background-color: $btn-hover-bg-color;
-      border-color: $btn-hover-bg-color;
+      background-color: $color-btn-hover;
+      border-color: $color-btn-hover;
       color: white;
     }
   }
