--- a/web-client/src/app/components/lobby/lobby.component.scss
+++ b/web-client/src/app/components/lobby/lobby.component.scss
@@ -1,10 +1,9 @@
+@import "../../../variables.scss";
+
 $padding-top: 30px;
 
-.container {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  width: 99vw;
+.members-list {
+  width: 100%;
 }
 
 .left {
@@ -22,6 +21,19 @@ $padding-top: 30px;
   flex: 1;
 }
 
+.game-table {
+  width: 100%;
+}
+
+.leader-button {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: $layer-floating-buttons;
+  margin: 40px;
+  box-shadow: 3px 5px 5px rgba(120, 120, 120, 0.7);
+}
+
 .leader-buttons {
   // margin-top: $padding-top;
   display: flex;
@@ -29,10 +41,6 @@ $padding-top: 30px;
   align-items: center;
   justify-content: center;
   margin-bottom: $padding-top;
-}
-
-.table {
-
 }
 
 .card-list {
