Inject canPlay into tray.

--- a/web-client/src/app/components/lobby/lobby.component.html
+++ b/web-client/src/app/components/lobby/lobby.component.html
@@ -24,6 +24,7 @@
 
   <app-personal-cards-tray
     *ngIf="roundActive"
+    [canPlay]="canPlay"
     [personalCards]="personalWhiteCards"
     [cardPlayedCallback]="cardPlayedCallback"></app-personal-cards-tray>
 </div>
