--- a/web-client/src/app/components/lobby/lobby.component.scss
+++ b/web-client/src/app/components/lobby/lobby.component.scss
@@ -23,6 +23,11 @@ $padding-top: 30px;
 
 .game-table {
   width: 100%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .leader-button {
@@ -49,7 +54,8 @@ $padding-top: 30px;
   align-items: flex-start;
   justify-content: flex-start;
   flex-wrap: wrap;
-  height: 600px;
+  margin-bottom: 20px;
+  // height: 600px;
 }
 
 .card {
@@ -63,12 +69,16 @@ $padding-top: 30px;
 .card-black {
   background-color: black;
   color: white;
+  margin: 0;
 }
 
 .card-white {
   background-color: white;
   color: black;
+}
 
+.card-white-first {
+  margin: 0;
 }
 
 .card-white-playable {
