Auto-move tray.

--- a/web-client/src/app/components/lobby/lobby.component.html
+++ b/web-client/src/app/components/lobby/lobby.component.html
@@ -28,6 +28,7 @@
 
   <app-personal-cards-tray
     *ngIf="roundActive"
+    [isOpen]="cardsTrayOpen"
     [canPlay]="canPlay"
     [personalCards]="personalWhiteCards"
     [cardPlayedCallback]="cardPlayedCallback"></app-personal-cards-tray>
