Change tray fab style.

--- a/web-client/src/app/components/personal-cards-tray/personal-cards-tray.component.html
+++ b/web-client/src/app/components/personal-cards-tray/personal-cards-tray.component.html
@@ -1,6 +1,6 @@
 <div class="personal-cards-tray" [class.personal-cards-tray-open]="isOpen">
   <button
-    class="btn btn-primary cards-tray-toggle-fab personal-cards-tray-open"
+    class="btn cards-tray-toggle-fab personal-cards-tray-open"
     (click)="toggleTray()">
     <i class="fas fa-chevron-up toggle-icon" [class.toggle-icon-down]="isOpen"></i>
   </button>
