--- a/web-client/src/styles.scss
+++ b/web-client/src/styles.scss
@@ -34,6 +34,7 @@ input[type=text].big-input {
   font-size: 18pt;
   text-align: center;
   color: #636363;
+  max-width: 100%;
 }
 
 input[type=text].big-input:focus {
